# stn

./: .gitignore  01_audit_cohort.py.bak_lfp  02_extract_lfp.py.bak_rename_fix  AGENTS.md  BACKUPS.md  MASTER_PLAN.md  README.md  STN_BetaBurst_DynapSE1_MasterPlan.md  pyproject.toml  slurm_extract.sh.bak
audit/: audit_log.txt  cohort_summary.tsv  cohort_summary.tsv.pre_montage_fix  exclusion_log.tsv  exclusion_log.tsv.pre_montage_fix  montage_contact_counts.tsv  runs_detail.tsv
backups/: 02_extract_lfp.py.bak_joblib  02_extract_lfp.py.bak_pick_fix  slurm_audit.sh.bak  slurm_extract.sh.bak_fatjob
configs/: filter_bank.yaml  gridsearch_phase4.yaml  gridsearch_phase5.yaml  gridsearch_phase5_focused.yaml  lif_encoder.yaml  nsm_mono.yaml  nsm_mono_frozen.yaml  synthetic_beta.yaml
docs/: BRIAN2_SNN_STATE_MACHINE_HANDOVER.md  BRIAN2_STATUS_MACHINE_TEAM_HANDOFF.md  PHASE4_RUNBOOK.md  PHASE5_2C_ARCHITECTURAL_TARGET_REASSESSMENT.md  PHASE5_2C_BURDEN_STATE_CEILING_COMPARISON.md  PHASE5_2C_EVENT_ALARM_RECONSTRUCTION_HEADROOM.md  PHASE5_2C_EVENT_DETECTION_LIMITATION_ANALYSIS.md  PHASE5_2C_EVENT_TARGET_DECISION_PACKAGE.md  PHASE5_2C_EVENT_TARGET_DECISION_PACKAGE_REVISED.md  PHASE5_2C_PRE_ADR_BOUNDED_REMEDIATION_ANALYSIS.md  PHASE5_2C_PRE_ADR_RECOMMENDATION.md  PHASE5_2C_ROBUSTNESS_FAMILY_PROTOCOL.md  PHASE5_2C_SCORING_TOLERANCE_SENSITIVITY.md  PHASE5_2C_STAGE_G_H_I_EXECUTION_PLAN.md  PHASE5_RUNBOOK.md  RUNBOOK_audit_extract_transfer.md  cluster_resource_policy.md  decisions.md
git_audit/: files_over_95MB.tsv
outputs/: current_status.md  long_run_policy_patch_report.md
(+208 files in other folders)
